# ChangeLog for dev-python/newrelic
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*newrelic-2.44.0.36 (03 Mar 2015)

  03 Mar 2015; Marius Brehler <marbre@linux.sungazer.de> +metadata.xml,
  +newrelic-2.44.0.36.ebuild:
  Initial ebuild