@@ -1,1 +1,2 @@
 DIST newrelic-2.44.0.36.tar.gz 656605 SHA256 373d3af3e9f0c233932ddcf024f978eed3bd6ceaee9563aedb65c029f7f9b2b7 SHA512 2e9b7b6afd74c562c82813d0245822a194e151abf1e32827915b83677db811032711418ae2bd0c26b3ea4727323ca53d538862957d8cd07f7f6a2ce26630a682 WHIRLPOOL a36537b56d9e18c5143149821120296e3aae53094d9038bc0f2e4ac175820f7d6600c84d8cf17199d7a53e6dc93ef2e41885f17f2ace7de87c97a3100200149d
+DIST newrelic-2.50.0.39.tar.gz 662564 SHA256 fddd47a8d048e0c5f42eee511a8aaf35891c996d6c959553c7bec8b3ac74b3cb SHA512 935973b7897348113ab40ac4f1ea173cf31886057569a0384e4a26d96463220a43768a4dd88ac4e4a8a7db01ab4fe6fde7825860a7fbd62911ead5fc2e3f0774 WHIRLPOOL e2044913e7274703fe76368db84f2f670810653b08855e5ac067e8f009b42cb222bd8958c92a12401ac5a1630d2797f0ae77f832d85288941d56eb181efe1693
